kubernetes/companyinfo-service.yaml
# Company-Info-Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: companyinfo-svc
  labels:
    app: companyinfo-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: companyinfo-svc
  template:
    metadata:
      labels:
        app: companyinfo-svc
    spec:
      containers:
        - name: companyinfo-svc
          image: chaosengacr2.azurecr.io/companyinfo-service:v1.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: companyinfo-svc
spec:
  type: ClusterIP
  selector:
    app: companyinfo-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
