kubernetes/reviews-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-svc
  labels:
    app: reviews-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-svc
  template:
    metadata:
      labels:
        app: reviews-svc
    spec:
      containers:
        - name: reviews-svc
          image: chaosengacr2.azurecr.io/reviews-service:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-svc
spec:
  type: ClusterIP
  selector:
    app: reviews-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
