kubernetes/chaos-eng-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-eng-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: reviews-svc
spec:
  rules:
  - http:
      paths:
      - path: /compensations(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: compensation-svc
            port:
              number: 80
      - path: /reviews(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: reviews-svc
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: compensation-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-eng-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: compensation-svc
            port: 
              number: 80
        path: /static(/|$)(.*)
